objects/SLSI__SL_Intranet_PaginationSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manage page size in the pages where pagination is being used.</description>
    <fields>
        <fullName>SLSI__Calendar_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Calendar PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Calendar_PageSize__c</fullName>
        <label>Calendar PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Documents_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Documents PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Documents_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Documents PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__EmployeeDirectory_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>EmployeeDirectory PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__EmployeeDirectory_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>EmployeeDirectory PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__FeedPost_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>FeedPost PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__IntranetEventSummaryDetails_PageSize__c</fullName>
        <label>IntranetEventSummaryDetails PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__ManageGroups_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>ManageGroups PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Notifications_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Notifications PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Notifications_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Notifications PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Offices_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Offices PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Recent_Update_Page_Size__c</fullName>
        <label>Recent Update Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Recent_Updates_Days_Threshold__c</fullName>
        <label>Recent Updates Days Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Recent_Updates_Total_Records_Size__c</fullName>
        <label>Recent Updates Total Records Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__SearchResult_PageSize_Mobile__c</fullName>
        <defaultValue>20</defaultValue>
        <label>SearchResult PageSize Mobile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__SearchResult_PageSize__c</fullName>
        <defaultValue>20</defaultValue>
        <label>SearchResult PageSize</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SL_Intranet Pagination Settings</label>
</CustomObject>